namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-court-data-ingestion-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-court-data-ingestion-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "calculate_release_dates_public_channel"
    cloud-platform.justice.gov.uk/application: "Court Data Ingestion"
    cloud-platform.justice.gov.uk/owner: "Court Data Ingestion: calculatereleasedatesdevelopers@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-court-data-ingestion-api"
    cloud-platform.justice.gov.uk/team-name: "calculate-release-dates-team"
    cloud-platform.justice.gov.uk/review-after: ""
